# sdk-nrf

./: .checkpatch.conf  CODEOWNERS  west.yml
applications/serial_lte_modem/: Kconfig  overlay-lwm2m-1nce.conf  overlay-lwm2m.conf
applications/serial_lte_modem/1nce_api/: 1nce_api.py  tlv.py
applications/serial_lte_modem/boards/: nrf9161dk_nrf9161_ns.overlay
applications/serial_lte_modem/src/: slm_at_commands.c  slm_at_host.c  slm_ppp.c  slm_ppp.h
applications/serial_lte_modem/src/lwm2m/: Kconfig  slm_at_lwm2m.c  slm_at_lwm2m.h  slm_lwm2m_device.c
doc/nrf/libraries/modem/: uicc_lwm2m.rst
include/modem/: pdn.h
include/net/: download_client.h  lwm2m_client_utils.h
lib/: CMakeLists.txt  Kconfig
lib/lwm2m_carrier/: CHANGELOG.rst  lwm2m_carrier.rst
lib/lwm2m_carrier/include/: lwm2m_carrier.h
lib/lwm2m_carrier/os/: lwm2m_os.c
lib/nrf_modem_lib/: nrf91_sockets.c
lib/pdn/: pdn.c
lib/pkcs15/: CMakeLists.txt  Kconfig
lib/pkcs15/include/: asn1_decode.h  pkcs15_decode.h
lib/pkcs15/src/: asn1_decode.c  pkcs15_decode.c
lib/sim_bootstrap/: CMakeLists.txt  Kconfig
lib/sim_bootstrap/include/: sim_bootstrap.h
lib/sim_bootstrap/src/: sim_bootstrap.c
lib/uicc_lwm2m/: Kconfig  asn1_decode.c  pkcs15_decode.c
samples/cellular/modem_shell/: prj.conf
samples/cellular/uicc_lwm2m/: README.rst
samples/net/http_server/: overlay-cellular.conf
tests/lib/pkcs15/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/pkcs15/src/: main.c
tests/lib/sim_bootstrap/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/sim_bootstrap/src/: main.c
(+20 files in other folders)
